# rust_auth_back_jwt

./: .env  .gitignore  docker-compose.yml  init.sql
migrations/: init.sql
rust_auth_jwt/: Cargo.toml
rust_auth_jwt/src/: main.rs
rust_auth_jwt/src/controllers/: auth_controllers.rs  mod.rs  sessions_controllers.rs  users_controllers.rs
rust_auth_jwt/src/middlewares/: mod.rs
rust_auth_jwt/src/models/: mod.rs  user_model.rs  user_session_model.rs
rust_auth_jwt/src/routes/: auth_routes.rs  mod.rs  sessions_routes.rs  users_routes.rs
