[package]
name = "rust_auth_jwt"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
axum = "0.8.1"
axum-extra = {version = "0.10.1", features = ["cookie"]}
sqlx = {version = "0.8.0", features = ["postgres","runtime-async-std","chrono"] }
serde = {version = "1.0.209", features = ["derive"]}
tower-http = { version = "0.6.2" , features = ["cors","trace"]}
bcrypt = "0.17"
time = "0.3.41"
jsonwebtoken = "9.3.1"
chrono = {version="0.4.40", features = ["serde"]}
tower-cookies = "0.11.0"
uuid = {version = "1.16.0", features = ["v4"]}
http = "1.3.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }


log = "0.4.27"
env_logger = "0.11.8"